objects/ssot__LoyaltyLedger__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityDateTime__c</fullName>
        <label>Activity DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataEntityId__c</fullName>
        <label>Data Entity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataEntityInstanceId__c</fullName>
        <label>Data Entity Instance</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EscrowPointsCreditDate__c</fullName>
        <label>Escrow Points Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialTransactionTypeId__c</fullName>
        <label>Financial TransactionType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Ledger Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LedgerProcessingStatusId__c</fullName>
        <label>Ledger Processing Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyCurrencyUnitQuantity__c</fullName>
        <label>Loyalty Currency Unit Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyLedgerNotesText__c</fullName>
        <label>Loyalty Ledger Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyPgmCurrencySubtypeId__c</fullName>
        <label>Loyalty Program Currency Subtype</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCurrencyExpirationDate__c</fullName>
        <label>Loyalty Program Currency Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCurrencyId__c</fullName>
        <label>Loyalty Program Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramCurrencyUnitsQuantity__c</fullName>
        <label>Loyalty Program Currency Units Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramMemberId__c</fullName>
        <label>Loyalty Program Member</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTransactionJournalId__c</fullName>
        <label>Loyalty Transaction Journal</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PointsNumber__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761180012_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyLedger_LoyaltyProgramCurrency_rel</label>
        <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
        <relationshipLabel>LoyaltyLedger_LoyaltyProgramCurrency_rel</relationshipLabel>
        <relationshipName>rel_1697761180012_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761180115_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyLedger_LoyaltyTransactionJour_rel</label>
        <referenceTo>ssot__LoyaltyTransactionJournal__dlm</referenceTo>
        <relationshipLabel>LoyaltyLedger_LoyaltyTransactionJour_rel</relationshipLabel>
        <relationshipName>rel_1697761180115_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761181995_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramCurrency_Id_map_Loyalt_rel</label>
        <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramCurrency_Id_map_Loyalt_rel</relationshipLabel>
        <relationshipName>rel_1697761181995_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>